...
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:text="Name: " />

                <EditText
                    android:id="@+id/itemName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:ems="10" />
            </LinearLayout>

...
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:text="Quality: " />

                <EditText
                    android:id="@+id/itemQuality"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:ems="10" />
            </LinearLayout>

...
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:text="Category: " />

                <Spinner
                    android:id="@+id/itemCategory"
                    android:layout_width="300px"
                    android:layout_height="wrap_content"
                    android:entries="@array/categories_array"/>
            </LinearLayout>

            <LinearLayout
...
                    android:layout_height="wrap_content"
                    android:text="Private: " />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/itemPrivateCheckBox" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
...

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textMultiLine"
                    android:id="@+id/itemDescription" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
...

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:text="EDIT"
                android:id="@+id/editItem"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:text="SAVE"
                android:id="@+id/saveItem"
                android:visibility="gone"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:text="DELETE"
                android:id="@+id/deleteItem"/>



        </LinearLayout>

    </ScrollView>
...
