...

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:text="ADD TO INVENTORY"
                android:id="@+id/addItem"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>
...
